@@ -1,3 +1,15 @@
+Sat Nov  1 13:39:29 UTC 2008  Phil Mesnier  <mesnier_p@ociweb.com>
+
+        * orbsvcs/orbsvcs/IFRService/IFR_Service_Utils.h:
+        * orbsvcs/orbsvcs/IFRService/IFR_Service_Utils.cpp:
+
+          Added method to allow applications collocating the IFR service
+          to provide an alternate POA for it to use as root rather than
+          having the IFR service use the ORB's root POA. This was found 
+          to be necessary when an application linking the IFR service 
+          needed to have it use a POA with an endpoint policy applied to
+          enforce access restrictions on the IFR.
+        
 Sat Nov  1 12:43:06 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>
 
         * orbsvcs/orbsvcs/Log/Hash_LogRecordStore.cpp:
